# AP_deprecated

./: .gitignore  CMakeLists.txt  README.md  base.frag  base.glsl  bone.glsl  common.cpp  common.glsl  conanfile.txt  env.yml  environment.yml  genVoxels.glsl  line.glsl  main.cpp  module.cpp  renderVoxels.glsl
AnimationPlayer/: CMakeLists.txt  Geometry.cpp  base.frag  base.glsl  common.cpp  common.glsl  line.glsl  main.cpp  module.cpp  shadowmap.glsl  splat.glsl
Code/: CMakeLists.txt  Geometry.cpp  base.frag  base.glsl  common.cpp  common.h  ikrig.cpp  line.glsl  main.cpp  module.cpp  shadowmap.glsl  splat.glsl
