cmake_minimum_required(VERSION 3.5)
project(AnimationPlayer)

set(CMAKE_BINARY_DIR ${CMAKE_CURRENT_LIST_DIR})
set(CMAKE_PREFIX_PATH /home/will/.local/mambaforge/envs/cxx)
include_directories(${CMAKE_PREFIX_PATH}/include)
link_directories(${CMAKE_PREFIX_PATH}/lib)
find_package(glfw3 REQUIRED)
find_package(glad  REQUIRED)
find_package(glm   REQUIRED)
find_package(Boost REQUIRED)
find_package(OpenAL REQUIRED)

add_definitions(-DGLFW_INCLUDE_NONE)
#file(COPY base.frag base.glsl DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
add_executable(${PROJECT_NAME} main.cpp)
target_link_libraries(${PROJECT_NAME} glfw glad openal Common)
target_link_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_BINARY_DIR})

add_library(Common SHARED common.cpp common.glsl base.frag base.glsl line.glsl bone.glsl)
add_library(Module SHARED module.cpp)
